syntax = "proto3";

package xapp;

option go_package = "./pb";

// ------------------------------------//
// ------------- Services ------------//
// ----------------------------------//

 service E2SM_KPM_Service {
    rpc GetIndicationStream (KPMIndicationRequest) returns (stream KPMIndicationResponse);
 }

// ------------------------------------//
// ------------- Messages ------------//
// ----------------------------------//

 message KPMIndicationRequest {
  string svc_name = 1;
 }

 message KPMIndicationResponse {
  uint64 collectStartTime = 1;
  UEInfos ue = 2;
 }

 message E2NodeInfos { // not used
  uint32 nodeb_id = 1;
  string node_type_name = 2;
  uint32 mcc = 3;
  uint32 mnc = 4;
  uint32 mnc_digit_len = 5;
  optional uint32 cu_du_id = 6;
 }

 message UEInfos {
  UEIDs ue_id = 1;
  repeated MeasInfo ue_meas_info = 2;
 }

 message UEIDs {
  uint64 gnb_cu_ue_f1ap_id = 1;
	uint64 amf_ue_ngap_id = 2;
	uint32 gnb_cu_cp_ue_e1ap_id = 3;
	uint64 ran_ue_id = 4;
 }

 message Guami_t { // not used
  PlmnId plmn = 1;
	uint32 amf_region_id = 2;
	uint32 amf_set_id = 3;
 }

 message PlmnId { // not used
  uint32 mcc = 1;
	uint32 mnc = 2;
	uint32 mnc_digit_len = 3;
 }

 message MeasInfo {
  string meas_name = 1;
  oneof meas_value {
    uint64 int_value = 2;
    double real_value = 3;
   }
 }